# ucv-ate-si-laboratorio07

./: README.md
.github/workflows/: ci.yml
si-image-processing-lab/: pyproject.toml
si-image-processing-lab/si-image-processing-lab/: pyproject.toml
si-image-processing-lab/si-image-processing-lab/conf/base/: catalog.yml
si-image-processing-lab/si-image-processing-lab/src/si_image_processing_lab/: pipeline_registry.py  settings.py
si-image-processing-lab/si-image-processing-lab/src/si_image_processing_lab/pipelines/image_processing/: nodes.py
si-image-processing-lab/si-image-processing-lab/tests/: test_image_processing.py
